--- a/src/examples/scan.yml
+++ b/src/examples/scan.yml
@@ -1,7 +1,7 @@
 description: "Start the scan on a website (target) using Netsparker Enterprise."
 usage:
   orbs:
-    netsparker: "netsparker/scan@dev:alpha"
+    netsparker: "netsparker/scan@1.0.0"
   version: 2.1
   workflows:
     example-workflow:
