--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,10 @@ executors:
   ci-base:
     resource_class: small
     docker:
-    - image: cimg/base:2019.10
+    - image: cimg/base:<<parameters.tag>>
     parameters:
       tag:
-        default: latest
+        default: 2019.10
         description: >
          Pick a specific cimg/base image variant:
          https://hub.docker.com/r/cimg/base/tags
