--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 orbs:
   orb-tools: circleci/orb-tools@8.5.0
-  netsparker: netsparker/scan@dev:alpha
+  netsparker: netsparker/scan@1.0.0
 
 executors:
    ci-base:
