--- a/src/commands/scan.yml
+++ b/src/commands/scan.yml
@@ -3,31 +3,30 @@ parameters:
   api_token:
     default: NETSPARKER_ENTERPRISE_API_TOKEN
     description: |
-        "Netsparker Enterprise API token which you can find in your Netsparker Enterprise API settings page.
-        This will be used for the API authentication.NETSPARKER_ENTERPRISE_API_TOKEN environment variable.\n"
+        Netsparker Enterprise API token which you can find in your Netsparker Enterprise API settings page.
+        This will be used for the API authentication.NETSPARKER_ENTERPRISE_API_TOKEN environment variable.
     type: env_var_name
   api_url:
     default: "https://www.netsparkercloud.com/"
-    description: "Netsparker Enterprise Server URL like, https://www.netsparkercloud.com.\n"
+    description: Netsparker Enterprise Server URL like, https://www.netsparkercloud.com.
     type: string
   scanProfile_id:
+    default: 00000000-0000-0000-0000-000000000000
     description: |
-        "This profile will be used in the scan.
-        If scan_type is 'FullWithPrimaryProfile', you do not need to fill in scanProfile_id.\n"
+        This profile will be used in the scan.
+        If scan_type is 'FullWithPrimaryProfile', you do not need to fill in scanProfile_id.
     type: string
   scan_type:
-    default: FullWithPrimaryProfile
-    description: "The requested scan type. (Incremental,FullWithPrimaryProfile or FullWithSelectedProfile)\n"
+    description: The requested scan type. (Incremental,FullWithPrimaryProfile or FullWithSelectedProfile)
     type: string
   user_id:
     default: NETSPARKER_ENTERPRISE_USER_ID
     description: |
-        "Netsparker Enterprise user id which you can find in your Netsparker Enterprise API settings page.
-        This will be used for the API authentication.NETSPARKER_ENTERPRISE_USER_ID environment variable.\n"
+        Netsparker Enterprise user id which you can find in your Netsparker Enterprise API settings page.
+        This will be used for the API authentication.NETSPARKER_ENTERPRISE_USER_ID environment variable.
     type: env_var_name
   website_id:
-    default: NETSPARKER_ENTERPRISE_WEBSITE_ID
-    description: "The id of the website (target) to scan."
+    description: The id of the website (target) to scan.
     type: string
 steps:
   -
@@ -59,5 +58,5 @@ steps:
             echo "Please set the scan type as a parameter for this orb."
             exit 1
           fi
-          curl -u "$<< parameters.user_id >>:$<< parameters.api_token >>" -X POST << parameters.api_url >>/api/1.0/scans/CreateFromPluginScanRequest -H "Content-Type: application/json" -d "{'WebsiteId': '<< parameters.website_id >>','ProfileId': '<< parameters.scanProfile_id >>','ScanType': '<< parameters.scan_type >>', 'VcsCommitInfoModel': {'CiBuildConfigurationName' : '$CIRCLE_PROJECT_REPONAME', 'CiBuildHasChange': '$CIRCLE_SHA1', 'CiBuildId': '$CIRCLE_BUILD_NUM', 'CiBuildServerVersion': '$CI_SERVER_VERSION', 'CiBuildUrl': '$CIRCLE_BUILD_URL', 'Committer': '$CIRCLE_USERNAME', 'IntegrationSystem': 'AzureDevOps', 'VcsName': '$CIRCLE_REPOSITORY_URL', 'VcsVersion': '$CIRCLE_SHA1'}}"
+          curl -u "$<< parameters.user_id >>:$<< parameters.api_token >>" -X POST << parameters.api_url >>/api/1.0/scans/CreateFromPluginScanRequest -H "Content-Type: application/json" -d "{'WebsiteId': '<< parameters.website_id >>','ProfileId': '<< parameters.scanProfile_id >>','ScanType': '<< parameters.scan_type >>', 'VcsCommitInfoModel': {'CiBuildConfigurationName' : '$CIRCLE_PROJECT_REPONAME', 'CiBuildHasChange': '$CIRCLE_SHA1', 'CiBuildId': '$CIRCLE_BUILD_NUM', 'CiBuildServerVersion': '$CI_SERVER_VERSION', 'CiBuildUrl': '$CIRCLE_BUILD_URL', 'Committer': '$CIRCLE_USERNAME', 'IntegrationSystem': 'CircleCI', 'VcsName': '$CIRCLE_REPOSITORY_URL', 'VcsVersion': '$CIRCLE_SHA1'}}"
       name: "Netsparker Enterprise - Starting Security Scan"
