--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ workflows:
 
     - orb-tools/trigger-integration-workflow:
         name: trigger-integration-master
-        ssh-fingerprints: 3a:58:c5:9c:21:cd:1f:30:a9:15:45:95:9a:a8:85:8d
+        ssh-fingerprints: c5:2c:43:49:62:79:81:58:28:43:73:e2:93:ef:0e:09
         cleanup-tags: true
         tag: master
         requires:
