--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,15 @@ workflows:
         orb-name: netsparker/scan
         requires:
         - orb-tools/pack
+        
+    - orb-tools/trigger-integration-workflow:
+        name: trigger-integration-dev
+        ssh-fingerprints: c5:2c:43:49:62:79:81:58:28:43:73:e2:93:ef:0e:09
+        requires:
+        - orb-tools/publish-dev
+        filters:
+          branches:
+            ignore: master
 
     - orb-tools/trigger-integration-workflow:
         name: trigger-integration-master
