--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ workflows:
 
     - orb-tools/trigger-integration-workflow:
         name: trigger-integration-dev
-        ssh-fingerprints: e2:51:8b:55:75:15:e3:1f:fd:e7:d4:5f:b6:a7:f7:16
+        ssh-fingerprints: c5:2c:43:49:62:79:81:58:28:43:73:e2:93:ef:0e:09
         requires:
         - orb-tools/publish-dev
         filters:
@@ -59,7 +59,7 @@ workflows:
 
     - orb-tools/trigger-integration-workflow:
         name: trigger-integration-master
-        ssh-fingerprints: e2:51:8b:55:75:15:e3:1f:fd:e7:d4:5f:b6:a7:f7:16
+        ssh-fingerprints: c5:2c:43:49:62:79:81:58:28:43:73:e2:93:ef:0e:09
         cleanup-tags: true
         tag: master
         requires:
